--- a/src/component/Product.css
+++ b/src/component/Product.css
@@ -5,8 +5,8 @@
 }
 
 .main {
-  padding-top: 10rem;     /* header height */
-  padding-bottom: 6rem;  /* footer height */
+  padding-top: 10rem;     
+  padding-bottom: 6rem;  
 }
 
 .product .box-container .box{
